--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
