--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8.4.47",
