--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.11.1",
+    "html2pdf.js": "^0.10.2",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
