--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.11.1",
-    "html2pdf.js": "^0.10.2",
     "next": "14.2.14",
+    "puppeteer": "^23.5.0",
     "react": "^18",
     "react-dom": "^18"
   },
