--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "puppeteer": "^23.5.0",
